Update and rename 2024-03-05-회의록(03-13) to 2024-03-13-회의록(03-13).md

--- a/_posts/2024-03-13-회의록(03-13).md
+++ b/_posts/2024-03-13-회의록(03-13).md
@@ -1,8 +1,8 @@
 ---
 layout: single
 #published: true
-title:  "2024-03-05(화)"
-excerpt: "피드백 내용의 개선에 대한 회의"
+title:  "2024-03-13(수)"
+excerpt: "계획서 수정관련 미팅"
 categories: meeting
 
 toc: true
