--- a/_posts/2024-03-14-회의록(2024-03-14).md
+++ b/_posts/2024-03-14-회의록(2024-03-14).md
@@ -1,3 +1,13 @@
+---
+layout: single
+title: "2024-03-14(목)"
+excerpt: "인터뷰 & 하드웨어 추가 회의"
+categories: meeting
+
+toc: true
+toc_sticky: true
+---
+
 # 2024/03/14(목)
 
 ⌚회의 시간 : 2024.03.14 22:00~23:23 ( 총 83분 소요)
