--- a/_posts/2024-04-01-회의록(04-01).md
+++ b/_posts/2024-04-01-회의록(04-01).md
@@ -1,3 +1,12 @@
+---
+layout: single
+title:  "2024-04-01(월)"
+excerpt: "주간 회의"
+categories: weeklyDiary
+
+toc: true
+toc_sticky: true
+---
 # 2024/04/01(월)
 
 ⌚회의 시간 : 2024.04.01 21:00~22:40 ( 총 1시간 40분 소요)
