--- a/_posts/2024-04-01-회의록(04-01).md
+++ b/_posts/2024-04-01-회의록(04-01).md
@@ -21,28 +21,33 @@ toc_sticky: true
 
 ## 🔳 **회의 주제 및 목적**
 
+정기회의
+
 03/25~ 03/31까지 진행상황 체크 및 이번주 진행목표 
 
 ## 🔳 **회의 내용**
 
-- 전준표
-    - 음성 데이터 전처리 코드 작성 완료
-- 조민수
-    - GUI 형식 디자인(xml 파일) 제작 완료
-- 유재휘
-    - 음성 파일 시작 및 종료 부분 삭제 코드 작성 완료 - 중간 공백부분
-    - 말하는 도중 잡음 제거 코드 - 소리에 지지직 잡음 있음 →코드 수정 필요
-    - 멀리서 나는 소리의 경우 잡음으로 판단되는지 소리가 제거됨.
-    
-- 이민석
-    - 라즈베리 파이 OS, VScode, 파이썬 설치 완료 → 개발 환경 구축 완료
-    - 프레임 임시 제작
+- 진행상황 공유
+    - 전준표
+        - 음성 데이터 전처리 알고리즘 코드 구현 완료
+        - 오디오파일 기반으로 테스트 완료
+    - 조민수
+        - GUI 형식 디자인(xml 파일) 제작 완료
+        - 기존 소음 측정 부분 피그마 이미지 수정
+    - 유재휘
+        - VAD 제거 알고리즘 구현 - 음성 시작 및 종료 부분 공백 제거 가능, 말하는 중간 공백은 제거 불가
+        - record 목소리 녹음 하는 코드 구현 → 녹음 파일 저장의 경우 기존 저장되어 있는 .wav 파일 전부 삭제
+        - ICA 코드 분석 → jypnb코드에서는 제대록 작동, 파이썬에서 같은 코드 실행 시 잡음 심해지는 현상 나타남
+        - 멀리서 나는 소리의 경우 잡음으로 판단되는지 소리가 제거됨.
+    - 이민석
+        - 라즈베리 파이 OS, VScode, 파이썬 설치 완료 → 개발 환경 구축 완료
+        - Blender 학습 및 초기 프레임 작업
 
 ## 🔳 **회의 결과**
 
-4/16 오프라인 회의 
+4/16 오프라인 회의 결정
 
-매주 월요일 온라인 회의 - 진행사항 확인
+진행상황 공유 완료 및 이번주 목표 선정
 
 ## ✔️할 일
 
