--- a/_posts/2024-04-01-회의록(04-01).md
+++ b/_posts/2024-04-01-회의록(04-01).md
@@ -2,7 +2,7 @@
 layout: single
 title:  "2024-04-01(월)"
 excerpt: "주간 회의"
-categories: weeklyDiary
+categories: meeting
 
 toc: true
 toc_sticky: true
